# deakin_rover

./: .gitignore  README.md  fixed_errors
.devcontainer/base_station/: Dockerfile  devcontainer.json
.devcontainer/rover/: Dockerfile  devcontainer.json
.devcontainer/rpi/: Dockerfile  devcontainer.json
base_station_ws/arm/misbah_arm/src/arm_description/: CMakeLists.txt  package.xml
base_station_ws/arm/misbah_arm/src/arm_description/config/: ros2_controllers.yaml  view_arm.rviz
base_station_ws/arm/misbah_arm/src/arm_description/launch/: view_arm.launch.py
base_station_ws/arm/misbah_arm/src/arm_description/urdf/: arm_controlled.urdf.xacro
base_station_ws/arm/misbah_arm/src/arm_moveit_config/: .setup_assistant  package.xml
base_station_ws/arm/misbah_arm/src/motor_node/: setup.py
base_station_ws/arm/misbah_arm/src/motor_node/urdf/: arm.urdf
base_station_ws/gui/src/app/: page.js
base_station_ws/gui/src/lib/utils/: constants.js
dcr_base_station/base_station_ws/src/rover_bringup/launch/: bringup.launch.xml
dcr_base_station/gui/src/lib/utils/: constants.js
dcr_rover/rover_ws/src/rover_antenna/: ESP32.ino
rpi_ws/: implementation.md  ros_architecture.md  start.sh
rpi_ws/src/rover_arm/: package.xml  setup.cfg  setup.py
rpi_ws/src/rover_arm/rover_arm/: arm_controller_node.py
rpi_ws/src/rover_autonomy/: package.xml  setup.py
rpi_ws/src/rover_autonomy/rover_autonomy/: autonomy_node.py
rpi_ws/src/rover_bringup/: package.xml  setup.py
rpi_ws/src/rover_bringup/config/: arm_motors.yaml  camera_config.yaml  drive_params.yaml
rpi_ws/src/rover_bringup/launch/: arm.launch.xml  control.launch.py  hardware.launch.py  infrastructure.launch.py  monitoring.launch.py  rover.launch.py
rpi_ws/src/rover_camera/: package.xml  setup.py
rpi_ws/src/rover_camera/rover_camera/: camera_node.py
rpi_ws/src/rover_can/: package.xml  setup.cfg  setup.py
rpi_ws/src/rover_can/rover_can/: can_bridge_node.py
rpi_ws/src/rover_description/: CMakeLists.txt  package.xml
rpi_ws/src/rover_description/config/: joint_limits.yaml
rpi_ws/src/rover_description/launch/: description.launch.py
rpi_ws/src/rover_description/urdf/: rover.urdf.xacro
rpi_ws/src/rover_drive/: package.xml  setup.py
rpi_ws/src/rover_drive/rover_drive/: drive_node.py
rpi_ws/src/rover_estop/: package.xml  setup.cfg  setup.py
rpi_ws/src/rover_estop/rover_estop/: estop_node.py
rpi_ws/src/rover_interfaces/: CMakeLists.txt  package.xml
rpi_ws/src/rover_interfaces/srv/: NodeControl.srv
rpi_ws/src/rover_joy/: package.xml  setup.cfg  setup.py
rpi_ws/src/rover_joy/rover_joy/: joy_teleop_node.py
rpi_ws/src/rover_monitor/: package.xml  setup.cfg  setup.py
rpi_ws/src/rover_monitor/rover_monitor/: system_monitor_node.py
rpi_ws/src/rover_node_manager/: package.xml  setup.cfg  setup.py
rpi_ws/src/rover_node_manager/rover_node_manager/: node_manager_node.py
rpi_ws/src/rover_serial/: package.xml  setup.py
rpi_ws/src/rover_serial/rover_serial/: rs485_bridge_node.py
rpi_ws/src/rover_status_lights/: package.xml  setup.cfg  setup.py
rpi_ws/src/rover_status_lights/rover_status_lights/: status_lights_node.py
(+4 files in other folders)
