<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for Deakin Rover</description>
  <maintainer email="rover@deakin.edu.au">Deakin Rover Team</maintainer>
  <license>MIT</license>

  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rover_interfaces</exec_depend>
  <exec_depend>rover_estop</exec_depend>
  <exec_depend>rover_camera</exec_depend>
  <exec_depend>rover_monitor</exec_depend>
  <exec_depend>rover_node_manager</exec_depend>
  <exec_depend>rover_drive</exec_depend>
  <exec_depend>rover_arm</exec_depend>
  <exec_depend>rover_can</exec_depend>
  <exec_depend>rover_serial</exec_depend>
  <exec_depend>rover_joy</exec_depend>
  <exec_depend>rover_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
