<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_serial</name>
  <version>0.1.0</version>
  <description>RS485/Modbus RTU bridge for BLD-3055 drive motors</description>
  <maintainer email="rover@deakin.edu.au">Deakin Rover Team</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
